syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/ebukacodes21/peerbill-trader-api/pb";

message Trader {
    int64 trader_id = 1;
    string        first_name = 2;
    string        last_name = 3;
    string        username = 4;
    string        email = 5;
    string        country = 6;
    string        phone = 7;
    google.protobuf.Timestamp created_at = 8;
}