syntax = "proto3";

package pb;

import "trader.proto";
import "trade_pair.proto";

option go_package = "github.com/ebukacodes21/peerbill-trader-api/pb";

message TraderWithDetails {
  Trader trader = 1;
  TraderPair tradePair = 2;
}